--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,8 +24,9 @@ body {
 
 button {
     border-radius: 20px;
-    margin: 0 3rem;
     height: 3rem;
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.604);
+    margin: auto;
 }
 
 input {
